--- a/index.html
+++ b/index.html
@@ -14574,6 +14574,31 @@ This tutorial provides a solution starter that shows you how to provision a prot
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p><img src="https://github.com/Anam-Mahmood/Solution-Starter-Kit-Energy-2020/blob/master/images/slide_images/Slide19.jpeg?raw=true" alt="center"></p>
+
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p><img src="https://github.com/Anam-Mahmood/Solution-Starter-Kit-Energy-2020/blob/master/images/slide_images/Slide20.jpeg?raw=true" alt="center"></p>
+
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p><img src="https://github.com/Anam-Mahmood/Solution-Starter-Kit-Energy-2020/blob/master/images/slide_images/Slide21.jpeg?raw=true" alt="center"></p>
+
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p><img src="https://github.com/Anam-Mahmood/Solution-Starter-Kit-Energy-2020/blob/master/images/slide_images/Slide22.jpeg?raw=true" alt="center"></p>
+
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p><img src="https://github.com/Anam-Mahmood/Solution-Starter-Kit-Energy-2020/blob/master/images/slide_images/Slide23.jpeg?raw=true" alt="center"></p>
 <h2 id="License">License<a class="anchor-link" href="#License">&#182;</a></h2><p><strong>Recommend</strong> that slides be shared under a <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a> license.</p>
 
 </div>
